# nasl-analyzer

./: Cargo.toml  README.md
.github/workflows/: tests.yml
.test-data/: example.inc  example.nasl  example2.nasl
nasl/: Cargo.toml
nasl/src/: cache.rs  interpret.rs  lib.rs  lookup.rs  node_ext.rs  openvas_funcs.rs  parser.rs  types.rs
src/: extension.rs  handler.rs  main.rs
