[package]
name = "nasl-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20"
tree-sitter-nasl = { path = "../treesitter-nasl"}
lsp-server = "0.6.0"
lsp-types = "0.93.0"
serde_json = "1.0.34"
serde = { version = "1.0.83", features = ["derive"] }
