[package]
name = "nasl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.35"
itertools = "0.10.2"
num_cpus = "1.0"
walkdir = "2"
tree-sitter = "0.20"
tree-sitter-nasl = "0.1.0"
tree-sitter-c = "0.20.1"
